RESOLVED FIXED314772
Web process sometimes crashes with excessive stack depth in TextExtraction::extractRecursive
https://bugs.webkit.org/show_bug.cgi?id=314772
Summary Web process sometimes crashes with excessive stack depth in TextExtraction::e...
Wenson Hsieh
Reported 2026-05-13 17:37:51 PDT
Attachments
Wenson Hsieh
Comment 1 2026-05-13 17:57:44 PDT
EWS
Comment 2 2026-05-14 07:51:38 PDT
Committed 313243@main (26970a5ac7ec): <https://commits.webkit.org/313243@main> Reviewed commits have been landed. Closing PR #64887 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.